# container-security-201

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  Taskfile.yml  container-security-201.yml  entrypoint.sh  pyproject.toml  requirements.yml  setup.cfg
.github/workflows/: ci.yml  commit.yml  update.yml
ansible/roles/cli-tools/tasks/: main.yml
