[project]
name = "container-security-201"
version = "0.1.0"
description = "A Container Security 201 lab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.pip]
universal = true
generate-hashes = true
require-hashes = true

[tool.uv]
managed = true
dev-dependencies = [
  "ansible-lint",
  "bumpversion",
  "pre-commit",
]
package = false
