[bumpversion]
current_version = 2025.12.01
parse = (?P<year>2[0-1]\d{2})\.(?P<month>(0\d|1[0-2]))(.(?P<increment>\d{2}))?
serialize = {year}.{month}.{increment}
commit = True
tag = True

[metadata]
author = "Jon Zeolla"
description = "Setup Jon Zeolla's Container Security 201 lab"
description-file = "README.md"
versioning = "CalVer"
license_file = "LICENSE"
name = "container-security-201"
url = "https://github.com/JonZeolla/container-security-201"

[bumpversion:file:VERSION]
